# SevZero

./: .gitignore  BLOG.md  Dockerfile  README.md  VIDEO_SCRIPT.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  sdk_info.txt
assets/: architecture.md  before_after.md  recording_checklist.md  reward_curve.py  scores_bar.py  training_pipeline.md
assets/fixtures/: sample_eval_results.csv  sample_metrics.jsonl
outputs/: baseline_20260330_144414.json  baseline_latest.json
server/: __init__.py  app.py  curriculum.py  environment.py  failures.py  grader.py  graph.py  logs.py  oversight.py  propagation.py  scenarios.py  schema_drift.py  simulator.py  traces.py
tests/: test_curriculum.py  test_grader.py  test_oversight.py  test_propagation.py  test_reward_shaping.py  test_schema_drift.py  test_simulator.py
training/: README.md  __init__.py  build_dataset.py  collect_trajectories.py  config_utils.py  env_client.py  eval.py  launch_hf_job.py  loader.py  preflight.py  push_dataset.py  rollout_sevzero.py  train_grpo.py  train_sft.py
training/data/: DATASET_README_HF.md  HANDOFF.md  build_stats.json  dataset_info.json  sft_eval.jsonl
